// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal tests fluid modal matches snapshot 1`] = `
<Modal
  fluid={true}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="wrapper-0-2-1"
        >
          <div
            class="modal-0-2-2 modal-d0-0-2-8"
          >
            <button
              class="close-0-2-4"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-5"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-7"
        />
        <div
          class="wrapper-0-2-9"
        >
          <div
            class="modal-0-2-10 modal-d0-0-2-16"
          >
            <button
              class="close-0-2-12"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-13"
            >
              <div>
                dialog
              </div>
              <div>
                contetn
              </div>
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-15"
        />
        <div
          class="wrapper-0-2-17"
        >
          <div
            class="modal-0-2-18 modal-d0-0-2-24"
          >
            <button
              class="close-0-2-20"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-21"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-23"
        />
        <div
          class="wrapper-0-2-33"
        >
          <div
            class="modal-0-2-34 modal-d0-0-2-40"
          >
            <button
              class="close-0-2-36"
              role="button"
            >
              x
            </button>
            <div
              class="header-0-2-35"
            >
              Header
            </div>
            <div
              class="content-0-2-37"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-39"
        />
        <div
          class="wrapper-0-2-41"
        >
          <div
            class="modal-0-2-42 modal-d0-0-2-48"
          >
            <button
              class="close-0-2-44"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-45"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-47"
        />
        <div
          class="wrapper-0-2-49"
        >
          <div
            class="modal-0-2-50 modal-d0-0-2-56"
          >
            <button
              class="close-0-2-52"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-53"
            />
            <div
              class="footer-0-2-54"
            >
              Footer
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-55"
        />
        <div
          class="wrapper-0-2-57"
        >
          <div
            class="modal-0-2-58 modal-d0-0-2-64"
          >
            <button
              class="close-0-2-60"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-61"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-63"
        />
        <div
          class="wrapper-0-2-65"
        >
          <div
            class="modal-0-2-66 modal-d0-0-2-72"
          >
            <button
              class="close-0-2-68"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-69"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-71"
        />
      </body>
    }
  >
    <div
      className="wrapper-0-2-65"
      onClick={[Function]}
    >
      <div
        className="modal-0-2-66 modal-d0-0-2-72"
      >
        <button
          className="close-0-2-68"
          onClick={[Function]}
          role="button"
        >
          x
        </button>
        <div
          className="content-0-2-69"
        >
          Modal
        </div>
      </div>
    </div>
    <div
      className="overlay-0-2-71"
    />
  </Portal>
</Modal>
`;

exports[`Modal tests it matches snapshot 1`] = `
<Modal>
  <Portal
    containerInfo={
      <body>
        <div
          class="wrapper-0-2-1"
        >
          <div
            class="modal-0-2-2 modal-d0-0-2-8"
          >
            <button
              class="close-0-2-4"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-5"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-7"
        />
        <div
          class="wrapper-0-2-9"
        >
          <div
            class="modal-0-2-10 modal-d0-0-2-16"
          >
            <button
              class="close-0-2-12"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-13"
            >
              <div>
                dialog
              </div>
              <div>
                contetn
              </div>
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-15"
        />
      </body>
    }
  >
    <div
      className="wrapper-0-2-9"
      onClick={[Function]}
    >
      <div
        className="modal-0-2-10 modal-d0-0-2-16"
      >
        <button
          className="close-0-2-12"
          onClick={[Function]}
          role="button"
        >
          x
        </button>
        <div
          className="content-0-2-13"
        >
          <div>
            dialog
          </div>
          <div>
            contetn
          </div>
        </div>
      </div>
    </div>
    <div
      className="overlay-0-2-15"
    />
  </Portal>
</Modal>
`;

exports[`Modal tests not closable modal matches snapshot 1`] = `
<Modal
  closable={false}
>
  <Portal
    containerInfo={
      <body>
        <div
          class="wrapper-0-2-1"
        >
          <div
            class="modal-0-2-2 modal-d0-0-2-8"
          >
            <button
              class="close-0-2-4"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-5"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-7"
        />
        <div
          class="wrapper-0-2-9"
        >
          <div
            class="modal-0-2-10 modal-d0-0-2-16"
          >
            <button
              class="close-0-2-12"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-13"
            >
              <div>
                dialog
              </div>
              <div>
                contetn
              </div>
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-15"
        />
        <div
          class="wrapper-0-2-17"
        >
          <div
            class="modal-0-2-18 modal-d0-0-2-24"
          >
            <button
              class="close-0-2-20"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-21"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-23"
        />
        <div
          class="wrapper-0-2-33"
        >
          <div
            class="modal-0-2-34 modal-d0-0-2-40"
          >
            <button
              class="close-0-2-36"
              role="button"
            >
              x
            </button>
            <div
              class="header-0-2-35"
            >
              Header
            </div>
            <div
              class="content-0-2-37"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-39"
        />
        <div
          class="wrapper-0-2-41"
        >
          <div
            class="modal-0-2-42 modal-d0-0-2-48"
          >
            <button
              class="close-0-2-44"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-45"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-47"
        />
        <div
          class="wrapper-0-2-49"
        >
          <div
            class="modal-0-2-50 modal-d0-0-2-56"
          >
            <button
              class="close-0-2-52"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-53"
            />
            <div
              class="footer-0-2-54"
            >
              Footer
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-55"
        />
        <div
          class="wrapper-0-2-57"
        >
          <div
            class="modal-0-2-58 modal-d0-0-2-64"
          >
            <button
              class="close-0-2-60"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-61"
            />
          </div>
        </div>
        <div
          class="overlay-0-2-63"
        />
        <div
          class="wrapper-0-2-65"
        >
          <div
            class="modal-0-2-66 modal-d0-0-2-72"
          >
            <button
              class="close-0-2-68"
              role="button"
            >
              x
            </button>
            <div
              class="content-0-2-69"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-71"
        />
        <div
          class="wrapper-0-2-73"
        >
          <div
            class="modal-0-2-74 modal-d0-0-2-80"
          >
            <div
              class="content-0-2-77"
            >
              Modal
            </div>
          </div>
        </div>
        <div
          class="overlay-0-2-79"
        />
      </body>
    }
  >
    <div
      className="wrapper-0-2-73"
      onClick={[Function]}
    >
      <div
        className="modal-0-2-74 modal-d0-0-2-80"
      >
        <div
          className="content-0-2-77"
        >
          Modal
        </div>
      </div>
    </div>
    <div
      className="overlay-0-2-79"
    />
  </Portal>
</Modal>
`;
